# OSI_lab_1

./: .gitignore  .gitignot  CMakeLists.txt  README.md
include/: pipeManager.hpp  platform.hpp  stringProcessor.hpp
report/src/: benchmark.tex  literature.tex  problem.tex  report.aux  report.out  report.tex  report.toc  src.tex  thinks.tex  titlepage.tex
report/styles/: log-style.sty
src/: childProcess.cpp  main.cpp  parentProcess.cpp  parentProcessImplementation.cpp  pipeManager.cpp  platform.cpp  stringProcessor.cpp
